Closed Bug 1921739 Opened 1 year ago Closed 1 year ago

New imap messages in subfolder are not showing (for secondary account, with sieve filtering into secondary account)

Categories

(MailNews Core :: Networking: IMAP, defect, P1)

Thunderbird 132
defect

Tracking

(relnote-thunderbird 128+, thunderbird_esr115 unaffected, thunderbird_esr128+ fixed, thunderbird131 wontfix, thunderbird132 fixed)

RESOLVED FIXED
133 Branch
Tracking Status
relnote-thunderbird --- 128+
thunderbird_esr115 --- unaffected
thunderbird_esr128 + fixed
thunderbird131 --- wontfix
thunderbird132 --- fixed

People

(Reporter: KaiE, Assigned: mkmelin, NeedInfo)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Use an IMAP account.
Have a server side filtering rule that sorts some new emails into a subfolder.
Click that subfolder in Thunderbird:

Actual: Folder name is shown in blue, but no new message inside.

Expected: New message is shown

This was experienced with the candidate build of 128.3.0

Apparently this is a regression from bug 1907691.

Backing out commit 4f004e83ed9f04d76b54112dba72d77af0891e32 locally fixes the bug for me.

Regressed by: 1907691

Typo in subject. "Not" showing

Summary: New imap messages in subfolder are now showing → New imap messages in subfolder are not showing

Have a server side filtering rule that sorts some new emails into a subfolder.

I'm using this in my main configuration, and haven't noticed any oddness. There must be some other detail to reproduce this.

Priority: -- → P1
Version: unspecified → Thunderbird 132

(In reply to Magnus Melin [:mkmelin] from comment #3)

I'm using this in my main configuration, and haven't noticed any oddness. There must be some other detail to reproduce this.

are you using sieve ?

I confirm that it needs a more complicated to reproduce.

Simply using direct sieve filtering into a subfolder is insufficient to reproduce.

In my scenario, I'm using two email accounts.

The primary account has a sieve rule to redirect certain emails to a secondary account.
The second account will filter the email into a subfolder.

Messages arriving in a subfolder of a primary account are shown by TB.

Messages arriving in a subfolder of the secondary account are not shown.

(In reply to Kai Engert (:KaiE:) from comment #4)

are you using sieve ?

No.

Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED

Thanks Kai for the report and suggestions! I don't have a way to reproduce this.

Summary: New imap messages in subfolder are not showing → New imap messages in subfolder are not showing (for secondary account, with sieve filtering into secondary account)

(In reply to Magnus Melin [:mkmelin] from comment #8)

Thanks Kai for the report and suggestions! I don't have a way to reproduce this.

I've provided a test setup to Magnus.

Patch works with the test setup.

Target Milestone: --- → 133 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/9d3c67c3195a
New imap messages in subfolder are not showing under some conditions. r=kaie

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED

Comment on attachment 9428063 [details]
Bug 1921739 - New imap messages in subfolder are not showing under some conditions. r=kaie

[Approval Request Comment]
Regression caused by (bug #): bug 1907691
User impact if declined: new msgs may not show
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): low

Attachment #9428063 - Flags: approval-comm-beta?

Comment on attachment 9428063 [details]
Bug 1921739 - New imap messages in subfolder are not showing under some conditions. r=kaie

[Approval Request Comment]
For 128, should first back out the backout - https://hg.mozilla.org/releases/comm-esr128/rev/36457f5e26f4499fa630a7d1909613c5ec148383 and then land this bug instead
128 is currently unaffected by this bug due to that backout, but instead affected by bug 1907691.

Attachment #9428063 - Flags: approval-comm-esr128?

Comment on attachment 9428063 [details]
Bug 1921739 - New imap messages in subfolder are not showing under some conditions. r=kaie

[Triage Comment]
Approved for beta

Attachment #9428063 - Flags: approval-comm-beta? → approval-comm-beta+

Comment on attachment 9428063 [details]
Bug 1921739 - New imap messages in subfolder are not showing under some conditions. r=kaie

[Triage Comment]
Approved for esr128
Rob, see Magnus' comments about backout prior to applying this patch https://bugzilla.mozilla.org/show_bug.cgi?id=1921739#c13

Attachment #9428063 - Flags: approval-comm-esr128? → approval-comm-esr128+
Flags: needinfo?(rob)

When you consider release notes for 128, please be aware that the bug description here doesn't match what we're fixing on 128.

The bug "messages not showing" never happened on a 128 release build. It had only happened in a candidate build.

The bug we're fixing in 128 is limited to the crash described in bug 1907691

Thanks Kai,
Would you be comfortable using the new relnote-thunderbird tracking flag and providing the comment details?

Flags: needinfo?(kaie)

I haven't used that tracking flag before, not sure what I'm required to enter.
The release notes should say we fixed a crash on startup, bug 1907691.

Flags: needinfo?(kaie) → needinfo?(corey)

Release Note Request (optional, but appreciated)
[Why is this notable]: Fixed startup crash reported in bug 1907691
[Suggested wording]: Fixed startup crash related to mailbox parsing
[Links (documentation, blog post, etc)]: https://bugzilla.mozilla.org/show_bug.cgi?id=1907691

@kaie - when you use that flag, it helps the release team collect relnotes a bit easier. Above are the fields which are required....

Flags: needinfo?(rob)
Flags: needinfo?(corey)

Hello,
Are there any other detail to reproduce this. As from STR on the comments i could not reproduce the faulty behaviour.

Flags: needinfo?(kaie)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: