Bug 1921739 - New imap messages in subfolder are not showing under some conditions. r=kaie

Backing out bug 1907691 and fixing it without any additional cleanup.

Differential Revision: https://phabricator.services.mozilla.com/D224103

--HG--
extra : rebase_source : 5b3841d2d57fb27ec2f1c4bfd926c37ce594ea3e
extra : amend_source : 44a584aa7e58d3f749ded8821f4ddc23920b6d11