mailnews/imap/src/nsImapServerResponseParser.cpp
@@ -577,10 +577,7 @@ void nsImapServerResponseParser::response_data() {
           if (!fNextToken)
             SetSyntaxError(true);
           else {
-            char* str = CreateAstring();
-            if (str) {
-              fMailAccountUrl.Adopt(str);
-            }
+            fMailAccountUrl.Adopt(CreateAstring());
             AdvanceToNextToken();
           }
         } else
@@ -788,10 +785,7 @@ void nsImapServerResponseParser::mailbox(nsImapMailboxSpec* boxSpec) {
     if (xlistInbox) PR_Free(CreateAstring());
     AdvanceToNextToken();
   } else {
-    char* name = CreateAstring();
-    if (name) {
-      boxname.Adopt(name);
-    }
+    boxname.Adopt(CreateAstring());
     AdvanceToNextToken();
   }
 
@@ -2097,9 +2091,7 @@ void nsImapServerResponseParser::myrights_data(bool unsolicited) {
       mailboxName = strdup(fSelectedMailboxName);
     } else {
       mailboxName = CreateAstring();
-      if (mailboxName) {
-        AdvanceToNextToken();
-      }
+      if (mailboxName) AdvanceToNextToken();
     }
     if (mailboxName) {
       if (ContinueParse()) {
@@ -2171,11 +2163,7 @@ void nsImapServerResponseParser::quota_data() {
     nsCString quotaroot;
     AdvanceToNextToken();
     while (ContinueParse() && !fAtEndOfLine) {
-      char* root = CreateAstring();
-      if (!root) {
-        break;
-      }
-      quotaroot.Adopt(root);
+      quotaroot.Adopt(CreateAstring());
       AdvanceToNextToken();
     }
     // Invalidate any previously stored quota data. Updated QUOTA data follows.
@@ -2186,10 +2174,7 @@ void nsImapServerResponseParser::quota_data() {
     AdvanceToNextToken();
     if (ContinueParse()) {
       nsCString quotaroot;
-      char* root = CreateAstring();
-      if (root) {
-        quotaroot.Adopt(root);
-      }
+      quotaroot.Adopt(CreateAstring());
       nsCString resource;
       AdvanceToNextToken();
       if (fNextToken) {
@@ -2201,11 +2186,7 @@ void nsImapServerResponseParser::quota_data() {
         // STORAGE in KBytes. A mailbox can have multiple quotaroots but
         // typically only one and with a single resource.
         while (ContinueParse() && !fAtEndOfLine) {
-          char* res = CreateAstring();
-          if (!res) {
-            break;
-          }
-          resource.Adopt(res);
+          resource.Adopt(CreateAstring());
           AdvanceToNextToken();
           usage = atoll(fNextToken);
           AdvanceToNextToken();
